2015-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (Image::quiet()): Patch by Dirk Lemstra
	to support silencing warnings in Magick++.  Adds a quiet() method
	which blocks (ignores) warning exceptions when passed a true
	argument.  Warning exceptions are still generated by default.

	* coders/tiff.c: Support '-define tiff:report-warnings=true' to
	enable that warnings reported by libtiff are thrown as warning
	exceptions so that they may be caught or will be reported at the
	gm command-line.

2015-02-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Use YCbCr encoding when JPEG
	compression is requested for an RGB image.

2015-02-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (QuantumTransferMode): Fix reading or writing
	planar min-is-white or min-is-black images with an associated
	alpha channel.

2015-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Reading empty XPM file should not
	cause bad memory access.

	* coders/gif.c (DecodeImage): Assure that GIF decoder does not use
	unitialized data.

	* coders/jpeg.c (ReadJPEGImage): Verify that we support the number
	of output components before proceeding to decode the image.

2015-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): MIFF needs to stop spinning if
	zlib or bzlib report an error while decompressing.  Solves problem
	with file provided by Jodie Cunningham on 2015-01-25.

	* coders/vicar.c (ReadVICARImage): Fix Vicar reader's dogged
	determination to continue reading when there is nothing left to
	read.  Solves problem with file provided by Jodie Cunningham on
	2015-01-25.

	* magick/magick.c (PanicDestroyMagick): Replace memory allocation
	functions with dummy functions rather than NULL pointers.
	(InitializeMagickSignalHandlers): Register
	MagickPanicSignalHandler() for SIGSEGV.