@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150208"
-#define public MagickPackageReleaseDate "snapshot-20150208"
+#define public MagickPackageVersionAddendum ".020150209"
+#define public MagickPackageReleaseDate "snapshot-20150209"
