@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2015-02-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/nt_base.h (STDERR_FILENO): Provide definitions for
+standard POSIX file numbers so that Visual Studio should compile.
+Fixes SourceForge bug #291 &quot;STDERR_FILENO (used in magick.c) is
+not defined under Windows&quot;</li>
+</ul>
+</blockquote>
 <p>2015-02-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
