@@ -1,3 +1,10 @@
+2015-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/nt_base.h (STDERR_FILENO): Provide definitions for
+	standard POSIX file numbers so that Visual Studio should compile.
+	Fixes SourceForge bug #291 "STDERR_FILENO (used in magick.c) is
+	not defined under Windows"
+
 2015-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Magick++/lib/Image.cpp (Image::quiet()): Patch by Dirk Lemstra
